commit de comprehension / suppression fichier inutile

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ ipch/
 *.opensdf
 *.sdf
 *.cachefile
-Debug/*.*
-OurFirstGame.VC.db
-OurFirstGame/Debug/*
+/Debug/
+/OurFirstGame.VC.db
+/OurFirstGame/Debug
